[package]
authors = ["lucastepper <lucas.tepper.91@gmail.com>"]
name = "correlation"
version = "0.1.0"
description = "Compute time correlation functions."
readme = "README.md"
edition = "2021"

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
numpy = "0.16.2"
ndarray = { version = "0.15.4", features = ["rayon"] }
crossbeam = "0.8.1"
indicatif = "0.16.2"
num_cpus = "1.13.1"
rayon = "1.5.3"


[lib]
name = "correlation"
crate-type = ["cdylib"]
