[package]
authors = ["lucastepper <lucas.tepper.91@gmail.com>"]
name = "correlation"
version = "0.1.0"
description = "Integrate GLE via Markovian Embedding."
readme = "README.md"
edition = "2021"

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
numpy = "0.16.2"
ndarray = { version = "0.15.4", features = ["rayon"] }
crossbeam = "0.8.1"


[lib]
name = "correlation"
crate-type = ["cdylib"]
